add new files in project

--- a/100_PSM/package.json
+++ b/100_PSM/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05_bg_color_change_with_tailwind",
+  "name": "100-psm",
   "private": true,
   "version": "0.0.0",
   "type": "module",
