--- a/07passwordGenerator/package.json
+++ b/07passwordGenerator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05_bg_color_change_with_tailwind",
+  "name": "07passwordgenerator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
